fixed flickering scrollbar by adding flex display to the root, added working progress bar, fixed some minor things, started responsive desing on left pane

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -21,7 +21,12 @@
     "left right"
     "playbar playbar";
 
-  .openFiles-input, .addFiles-input {
+  .openFiles-input,
+  .addFiles-input {
     display: none;
-  } 
+  }
+
+  audio {
+    display: none !important;
+  }
 }
