--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -118,6 +118,7 @@ body {
   font-family: "Saira-Medium";
   overflow: hidden;
 
+  display: flex; /* important for scrollbar flickering !! */
   height: 100%;
   width: 100%;
 
