--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -5,7 +5,7 @@
   color: lighten($third, 10%);
 
   z-index: 999;
-  height: 30px;
+  height: 25px;
   width: 100%;
 
   /* grid layout */
@@ -13,6 +13,7 @@
   align-items: center;
   display: grid;
 
+  font-size: 14px;
   /* grid item */
   .navbar__container {
     justify-content: left;
@@ -35,7 +36,7 @@
       margin-right: 3px;
       padding: 0 10px;
 
-      height: 100%;
+      height: 25px;
 
       align-items: center;
       display: flex;
