--- a/src/sass/playbar.scss
+++ b/src/sass/playbar.scss
@@ -3,7 +3,7 @@
   background-color: $secondary;
   grid-area: playbar;
   display: flex;
-  height: 32px;
+  height: 35px;
   width: 100%;
 
   font-family: "Roboto-Bold";
@@ -48,21 +48,24 @@
     height: 5px;
     width: 100%;
 
+    overflow: hidden;
     display: flex;
 
     &:hover {
       .line {
-        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
         background-color: rgb(255, 255, 255);
       }
     }
 
     /* fill or line */
     .line {
-      box-shadow: 0px 0px 5px rgba(255, 255, 255, 0);
-      transition: all 200ms ease;
+      -webkit-transition: all 250ms ease-out;
+      -moz-transition: all 250ms ease-out;
+      transition: all 250ms ease-out;
       background-color: $third;
-      width: 69%;
+      width: 100%;
+
+      transform: translate3d(-100.2%, 0, 0);
     }
   }
 }
@@ -179,7 +182,6 @@
         transition: all 200ms ease;
         background-color: $third;
         align-self: flex-end;
-        border-radius: 1px;
         height: 75%;
         width: 100%;
       }
